--- a/index.html
+++ b/index.html
@@ -177,14 +177,6 @@
             <button class="navbar-link" data-nav-link>Resume</button>
           </li>
 
-          <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Portfolio</button>
-          </li>
-
-          <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Tugas</button>
-          </li>
-
         </ul>
 
       </nav>
@@ -200,7 +192,7 @@
       <article class="about  active" data-page="about">
 
         <header>
-          <h2 class="h2 article-title">About Me</h2>
+          <h2 class="h2 article-title">Home</h2>
         </header>
 
         <section class="about-text">
@@ -393,7 +385,7 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">SMAN 1 KATEMAN</h4>
+              <h4 class="h4 timeline-item-title">SMAN 4 BATAM</h4>
 
               <span>2018 — 2021</span>
 
@@ -420,60 +412,6 @@
         </section>
 
         
-
-      </article>
-
-
-
-
-
-      <!--
-        - #PORTFOLIO
-      -->
-
-      <article class="IT info" data-page="IT info">
-
-        <header>
-          <h2 class="h2 article-title">IT info</h2>
-        </header>
-
-        <section class="projects">
-
-          <ul class="filter-list">
-
-            <li class="filter-item">
-              <button class="active" data-filter-btn>All</button>
-            </li>
-
-            <li class="filter-item">
-              <button data-filter-btn>Web design</button>
-            </li>
-
-            <li class="filter-item">
-              <button data-filter-btn>Applications</button>
-            </li>
-
-            <li class="filter-item">
-              <button data-filter-btn>Web development</button>
-            </li>
-
-          </ul>
-
-          <div class="filter-select-box">
-
-            <button class="filter-select" data-select>
-
-              <div class="select-value" data-selecct-value>Select category</div>
-
-              <div class="select-icon">
-                <ion-icon name="chevron-down"></ion-icon>
-              </div>
-
-            </button>
-
-
-
-        </section>
 
       </article>
 
