--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="My Name">BELINDA PANJAITAN</h1>
+          <h1 class="name" title="My Name">Belinda Panjaitan</h1>
 
           <p class="title">JASMINE</p>
         </div>
