--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Belinda Panjaitan - WEB</title>
+  <title> Belinda's Page</title>
 
   <!--
     - favicon
@@ -75,20 +75,6 @@
               <p class="contact-title">Email</p>
 
               <a href="" class="contact-link">belindanovelaa@gmail.com</a>
-            </div>
-
-          </li>
-
-          <li class="contact-item">
-
-            <div class="icon-box">
-              <ion-icon name="phone-portrait-outline"></ion-icon>
-            </div>
-
-            <div class="contact-info">
-              <p class="contact-title">Phone</p>
-
-              <a href="089811234567" class="contact-link">- </a>
             </div>
 
           </li>
@@ -171,10 +157,6 @@
 
           <li class="navbar-item">
             <button class="navbar-link  active" data-nav-link>About</button>
-          </li>
-
-          <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Resume</button>
           </li>
           
 
