--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <h4 class="h4 service-item-title">Click Dibawah Untuk Melihat Tugas Tugas</h4>
 
                 <p class="service-item-text">
-                  <a href="TUGAS/Week1-Week5_4332101003_AndiFadhilAkbarSyahbana.pdf" class="contact-link">Click Disini</a>
+                  <a href="Tugas Basis Data_Belinda Panjaitan_4332101022.pdf" class="contact-link">Click Disini</a>
                 </p>
               </div>
 
