--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <h4 class="h4 service-item-title">Web Personal</h4>
 
                 <p class="service-item-text">
-                  This web was made for me to put my personal task and also another thing about cyber security on this github
+                  This web was created for the purposes of college assignments and project report
                 </p>
               </div>
 
@@ -226,10 +226,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Click Dibawah Untuk Melihat Tugas Tugas</h4>
+                <h4 class="h4 service-item-title">Projects</h4>
 
                 <p class="service-item-text">
-                  <a href="Tugas Basis Data_Belinda Panjaitan_4332101022.pdf" class="contact-link">Click Disini</a>
+                  <a href="Tugas Basis Data_Belinda Panjaitan_4332101022.pdf" class="contact-link">Click Here</a>
                 </p>
               </div>
 
@@ -242,10 +242,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Politeknik Negeri Batam</h4>
+                <h4 class="h4 service-item-title">Batam State Polytechnic</h4>
 
                 <p class="service-item-text">
-                 D4-Rekayasa Keamanan siber
+                 Student Of Batam State Polytechnic
                 </p>
               </div>
 
